--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<a href="index.html" class="branding">
 							<img src="images/logo.png" alt="" class="logo">
 							<div class="logo-type">
-								<h1 class="site-title">Company name</h1>
-								<small class="site-description">Tagline goes here</small>
+								<h1 class="site-title">Vazquez-Padron Lab</h1>
+								<small class="site-description">Vascular Biology Laboratory at the University of Miami</small>
 							</div>
 						</a>
 
@@ -57,8 +57,8 @@
 					<li data-bg-image="images/slider-1.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
-								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
+								<h2 class="slide-title">Vascular Biology </h2>
+								<p>Our multidisciplinary laboratory especializes in translational applications of vascular biology</p>
 								<a href="#" class="button">See details</a>
 							</div>
 						</div>
@@ -66,7 +66,7 @@
 					<li data-bg-image="images/slider-2.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
+								<h2 class="slide-title">Molecular, Surgical and Computational Methods </h2>
 								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
 								<a href="#" class="button">See details</a>
 							</div>
@@ -75,8 +75,8 @@
 					<li data-bg-image="images/slider-3.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h2 class="slide-title">LaboreLabore et dolore magna</h2>
-								<p>Enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi aliquip ex ea commodo consequat duis aute irure dolor in reprehenderit.</p>
+								<h2 class="slide-title">Funded Work and Recent Publications</h2>
+								<p>Dr. Vazquez-Padron and Dr. Martinez lead our interdisciplinary lab.</p>
 								<a href="#" class="button">See details</a>
 							</div>
 						</div>
@@ -108,14 +108,6 @@
 								<div class="feature">
 									<img src="images/icon-genetics-small.png" alt="" class="feature-image">
 									<h2 class="feature-title">Genetics</h2>
-									<p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
-									<a href="" class="button">Learn more</a>
-								</div>
-							</div>
-							<div class="col-md-3 col-sm-6">
-								<div class="feature">
-									<img src="images/icon-energy-small.png" alt="" class="feature-image">
-									<h2 class="feature-title">Energy</h2>
 									<p>Laborum et dolorum fuga harum quidem rerum facilis et expedita distinctio nam libero tempore.</p>
 									<a href="" class="button">Learn more</a>
 								</div>
