--- a/project.html
+++ b/project.html
@@ -31,8 +31,8 @@
 						<a href="index.html" class="branding">
 							<img src="images/logo.png" alt="" class="logo">
 							<div class="logo-type">
-								<h1 class="site-title">Company name</h1>
-								<small class="site-description">Tagline goes here</small>
+								<h1 class="site-title">Vazquez-Padron Lab</h1>
+								<small class="site-description">Vascular Biology Lab University of Miami</small>
 							</div>
 						</a>
 
@@ -55,7 +55,7 @@
 			<div class="page-head" data-bg-image="images/page-head-3.jpg">
 				<div class="container">
 					<h2 class="page-title">Our Projects</h2>
-					<small>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit consequuntur magni </small>
+					<small>Our main current projects are highlighted below </small>
 				</div>
 			</div>
 
@@ -72,102 +72,27 @@
 							<div class="col-md-6">
 								<h2 class="section-title">Suscipit laboriosam aliquid commodi</h2>
 								<ul class="project-info">
-									<li><strong>Date:</strong> 06/10/14</li>
-									<li><strong>Client:</strong> Lorem ipsum</li>
-									<li><strong>Manager:</strong> Howard Brown</li>
-									<li><strong>Team:</strong> Jessica Smith, Tom Fisher, Sarah Branson, Ted Marks</li>
-									<li><strong>Goal:</strong> Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</li>
-									<li><strong>Info:</strong> Veniam, quis nostrud exercitation ullamco laboris nisi </li>
+									<li><strong>Date:</strong> 02/10/21</li>
+									<li><strong>Goal:</strong> Describe goal of each project</li>
+									<li><strong>Info:</strong> miscellaneous info </li>
 								</ul>
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="col-md-6">
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non.</p>
+								<p>Each Person Describes their project here.</p>
 
-								<p>incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum dolorem.</p>
+								<p>Each Person Describes their project here..</p>
 							</div>
 							<div class="col-md-6">
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non.</p>
+								<p>Each Person Describes their project here.</p>
 
-								<p>incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum dolorem.</p>
+								<p>Each Person Describes their project here.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-
-				
-			
-
-				<div class="fullwidth-block" data-bg-color="#edf2f4">
-					<div class="container">
-						<div class="subscribe-form">
-							<h2>Join our newsletter</h2>
-							<form action="#">
-								<input type="text" placeholder="Enter your email">
-								<input type="submit" value="Subscribe">
-							</form>
-						</div>
-					</div>
-				</div>
-
-			</main> <!-- .main-content -->
-
-			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Our address</h3>
-								<strong>Company name INC</strong>
-								<address>592 Avenue Street, Los Angeles, CA 90012</address>
-								<a href="tel:+1 800 931 812">+1 800 931 812</a> <br>
-								<a href="mailto:office@companyname.com">office@companyname.com</a>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Press room</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Research summary</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Social media</h3>
-								<p>Deserunt mollitia animi id est laborum dolorum fuga harum quidem rerum facilis.</p>
-								<div class="social-links">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
-								</div>
-							</div>
-						</div>
-					</div> <!-- .row -->
-
-					<p class="colophon">copyright 2014 Company name. Designed by <a href="http://www.vandelaydesign.com/" title="Designed by VandelayDesign.com" target="_blank">VandelayDesign.com</a>. All rights reserved</p>
-				</div> <!-- .container -->
-			</footer>
-		</div>
 
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/plugins.js"></script>
