--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
 						<a href="index.html" class="branding">
 							<img src="images/logo.png" alt="" class="logo">
 							<div class="logo-type">
-								<h1 class="site-title">Company name</h1>
-								<small class="site-description">Tagline goes here</small>
+								<h1 class="site-title">Vazquez-Padron Lab</h1>
+								<small class="site-description">Vascular Biology Lab at the University of Miami</small>
 							</div>
 						</a>
 
@@ -41,7 +41,6 @@
 							<ul class="menu">
 								<li class="home menu-item"><a href="index.html"><img src="images/home-icon.png" alt="Home"></a></li>
 								<li class="menu-item current-menu-item"><a href="about.html">About</a></li>
-								<li class="menu-item"><a href="services.html">Services</a></li>
 								<li class="menu-item"><a href="projects.html">Our projects</a></li>
 								<li class="menu-item"><a href="contact.html">Contact</a></li>
 							</ul>
@@ -55,7 +54,7 @@
 			<div class="page-head" data-bg-image="images/page-head-1.jpg">
 				<div class="container">
 					<h2 class="page-title">About us</h2>
-					<small>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit consequuntur magni </small>
+					<small>Our multidisciplinary laboratory especializes in translational applications of vascular biology</small>
 				</div>
 			</div>
 
@@ -64,60 +63,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4">
-								<h2 class="section-title">Why choose us?</h2>
-								<ol class="circle">
-									<li>
-										<h3>Dignissimos ducimus blanditiis</h3>
-										<p>Molestias excepturi sint occaecati cupiditate provident similique sunt culpa. omnis iste natus voluptatem.</p>
-									</li>
-									<li>
-										<h3>Accusantium doloremque totam</h3>
-										<p>Molestias excepturi sint occaecati cupiditate provident similique sunt culpa. omnis iste natus voluptatem.</p>
-									</li>
-									<li>
-										<h3>Cusamus dignissimos ducimus</h3>
-										<p>Molestias excepturi sint occaecati cupiditate provident similique sunt culpa. omnis iste natus voluptatem.</p>
-									</li>
-								</ol>
-							</div>
-							<div class="col-md-4">
-								<h2 class="section-title">Usefull links</h2>
-								<p>Nemo mollitia iste quis sed iure tempora dolore incidunt praesentium aspernatur! Praesentium impedit aperiam, commodi magnam accusamus nobis. Quia, velit sunt asperiores?</p>
-								<ul class="arrow-list has-border">
-									<li>Praesentium voluptatum deleniti atque dolores </li>
-									<li>Corrupti quos et quas molestias excepturi</li>
-									<li>Occaecati cupiditate non provident similique</li>
-									<li>Nam libero tempore, cum soluta nobis eligendi</li>
-									<li>Iditate non provident, similique sunt in culpa</li>
-									<li>Officia deserunt mollitia animi distinctio laborum</li>
-									<li>Dolorum fuga harum quidem rerum facilis</li>
-								</ul>
-							</div>
-							<div class="col-md-4">
-								<h2 class="section-title">Testimonials</h2>
-								<ul class="testimonial-list">
-									<li>
-										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam, quis</p>
-											<cite>Anthony Rubbens</cite>
-										</blockquote>
-									</li>
-									<li>
-										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam, quis</p>
-											<cite>Anthony Rubbens</cite>
-										</blockquote>
-									</li>
-									<li>
-										<blockquote>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua enim ad minim veniam, quis</p>
-											<cite>Anthony Rubbens</cite>
-										</blockquote>
-									</li>
-								</ul>
-							</div>
-						</div> <!-- .row -->
-					</div> <!-- .container -->		
+
 				</div> <!-- .fullwidth-block -->
 
 				<div class="fullwidth-block" data-bg-color="#edf2f4">
@@ -127,159 +73,37 @@
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-1.jpg" alt="" class="team-image">
-									<h3 class="team-name">Howard Hanson</h3>
-									<p>Praesentium deleniti atque corrupti quos dolores molestias excepturi.</p>
-									<div class="social-links">
-										<a href=""><i class="fa fa-facebook"></i></a>
-										<a href=""><i class="fa fa-twitter"></i></a>
-										<a href=""><i class="fa fa-google-plus"></i></a>
-										<a href=""><i class="fa fa-pinterest"></i></a>
-									</div>
-								</div>
-							</div>
+									<h3 class="team-name">Roberto Vazquez-Padron PhD</h3>
+									<p>Quick Description.</p>
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-2.jpg" alt="" class="team-image">
-									<h3 class="team-name">Jannet Smith</h3>
-									<p>Praesentium deleniti atque corrupti quos dolores molestias excepturi.</p>
-									<div class="social-links">
-										<a href=""><i class="fa fa-facebook"></i></a>
-										<a href=""><i class="fa fa-twitter"></i></a>
-										<a href=""><i class="fa fa-google-plus"></i></a>
-										<a href=""><i class="fa fa-pinterest"></i></a>
-									</div>
+									<h3 class="team-name">Laisel Martinez PharmD</h3>
+									<p>Quick Description</p>
 								</div>
 							</div>
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-3.jpg" alt="" class="team-image">
-									<h3 class="team-name">Paul Newman</h3>
-									<p>Praesentium deleniti atque corrupti quos dolores molestias excepturi.</p>
-									<div class="social-links">
-										<a href=""><i class="fa fa-facebook"></i></a>
-										<a href=""><i class="fa fa-twitter"></i></a>
-										<a href=""><i class="fa fa-google-plus"></i></a>
-										<a href=""><i class="fa fa-pinterest"></i></a>
-									</div>
-								</div>
+									<h3 class="team-name">Miguel Rojas</h3>
+									<p>Miguel is a graduate student as a member Physician Scientist program. He is interested in the application of computational tools to understand the progression of vascular pathologies</p>
+							<div class="col-md-3">
+								<div class="team">
+									<img src="images/person-4.jpg" alt="" class="team-image">
+									<h3 class="team-name">Zachary Zigmund</h3>
+									<p>Quick Description.</p>
 							</div>
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-4.jpg" alt="" class="team-image">
-									<h3 class="team-name">Sarah Dowson</h3>
-									<p>Praesentium deleniti atque corrupti quos dolores molestias excepturi.</p>
-									<div class="social-links">
-										<a href=""><i class="fa fa-facebook"></i></a>
-										<a href=""><i class="fa fa-twitter"></i></a>
-										<a href=""><i class="fa fa-google-plus"></i></a>
-										<a href=""><i class="fa fa-pinterest"></i></a>
-									</div>
+									<h3 class="team-name">Felipe Conti, PhD</h3>
+									<p>Quick Description.</p>
 								</div>
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
 				</div>
 
-				<div class="fullwidth-block">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-							</div>
-
-							<div class="col-md-6">
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-
-								<div class="checked-box">
-									<h3>Numquam eius modi tempora incidunt ut labore</h3>
-									<p>Voluptatem accusantium doloremque laudantium totam aperiam, eaque ipsa quae ab illo inventore veritatis quasi architecto beatae vitae dicta sunt explicabo nemo enim ipsam voluptatem voluptas.</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			
-
-				<div class="fullwidth-block" data-bg-color="#edf2f4">
-					<div class="container">
-						<div class="subscribe-form">
-							<h2>Join our newsletter</h2>
-							<form action="#">
-								<input type="text" placeholder="Enter your email">
-								<input type="submit" value="Subscribe">
-							</form>
-						</div>
-					</div>
-				</div>
-
-			</main> <!-- .main-content -->
-
-			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Our address</h3>
-								<strong>Company name INC</strong>
-								<address>592 Avenue Street, Los Angeles, CA 90012</address>
-								<a href="tel:+1 800 931 812">+1 800 931 812</a> <br>
-								<a href="mailto:office@companyname.com">office@companyname.com</a>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Press room</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Research summary</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Social media</h3>
-								<p>Follow our lab updates and recent publications in Twitter</p>
-								<div class="social-links">
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
-						</div>
 					</div> <!-- .row -->
 
 				</div> <!-- .container -->
