--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
 						<a href="index.html" class="branding">
 							<img src="images/logo.png" alt="" class="logo">
 							<div class="logo-type">
-								<h1 class="site-title">Company name</h1>
-								<small class="site-description">Tagline goes here</small>
+								<h1 class="site-title">Vazquez-Padron Lab</h1>
+								<small class="site-description">Vascular Biology Laboratory at the University of Miami</small>
 							</div>
 						</a>
 
@@ -55,17 +55,15 @@
 			<div class="page-head" data-bg-image="images/page-head-3.jpg">
 				<div class="container">
 					<h2 class="page-title">Our Projects</h2>
-					<small>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit consequuntur magni </small>
+					<small>Quick Description of our main projects </small>
 				</div>
 			</div>
 
 			<main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
-						<h2 class="section-title">Eiusmod tempor incididunt labore</h2>
-						<p>Corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt culpa. omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p> 
-
-						<p>perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+						<h2 class="section-title">Atherosclerosis, hypertension, and vascular proliferation in its application to surgical procedures are our main focus</h2>
+						<p>Quick Description.</p> 
 					</div>
 				</div>
 
@@ -75,48 +73,48 @@
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-1.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Laisel projects</h3>
+									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-2.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Miguel Projects</h3>
+									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-3.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Zach Projects</h3>
+									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-4.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Felipe Projects</h3>
+									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-5.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Medical Student Projects</h3>
+									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
 									<figure class="project-image"><img src="images/project-6.jpg" alt="Project"></figure>
-									<h3 class="project-title">Tempora incidunt labore dolore</h3>
-									<p>Dignissimos ducimus blanditiis deleniti atque corrupti quos dolores et quas molestias.</p>
+									<h3 class="project-title">Clinical Projects</h3>
+									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
@@ -124,76 +122,6 @@
 					</div>
 				</div>
 			
-
-				<div class="fullwidth-block" data-bg-color="#edf2f4">
-					<div class="container">
-						<div class="subscribe-form">
-							<h2>Join our newsletter</h2>
-							<form action="#">
-								<input type="text" placeholder="Enter your email">
-								<input type="submit" value="Subscribe">
-							</form>
-						</div>
-					</div>
-				</div>
-
-			</main> <!-- .main-content -->
-
-			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Our address</h3>
-								<strong>Company name INC</strong>
-								<address>592 Avenue Street, Los Angeles, CA 90012</address>
-								<a href="tel:+1 800 931 812">+1 800 931 812</a> <br>
-								<a href="mailto:office@companyname.com">office@companyname.com</a>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Press room</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Research summary</h3>
-								<ul class="arrow-list">
-									<li><a href="#">Accusantium doloremque</a></li> 
-									<li><a href="#">Laudantium totam aperiam</a></li>
-									<li><a href="#">Eaque ipsa quae illo inventore</a></li> 
-									<li><a href="#">Veritatis et quasi architecto</a></li>
-									<li><a href="#">Vitae dicta sunt explicabo</a></li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="widget">
-								<h3 class="widget-title">Social media</h3>
-								<p>Deserunt mollitia animi id est laborum dolorum fuga harum quidem rerum facilis.</p>
-								<div class="social-links">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-pinterest"></i></a>
-								</div>
-							</div>
-						</div>
-					</div> <!-- .row -->
-
-					<p class="colophon">copyright 2014 Company name. Designed by <a href="http://www.vandelaydesign.com/" title="Designed by VandelayDesign.com" target="_blank">VandelayDesign.com</a>. All rights reserved</p>
-				</div> <!-- .container -->
-			</footer>
-		</div>
-
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script src="js/plugins.js"></script>
 		<script src="js/app.js"></script>
