--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 				</div>
 			</header>
 
-			<div class="page-head" data-bg-image="images/page-head-1.jpg">
+			<div class="page-head" data-bg-image="images/page-head-mr.jpg">
 				<div class="container">
 					<h2 class="page-title">About us</h2>
 					<small>Our multidisciplinary laboratory especializes in translational applications of vascular biology</small>
@@ -74,32 +74,48 @@
 								<div class="team">
 									<img src="images/person-1.jpg" alt="" class="team-image">
 									<h3 class="team-name">Roberto Vazquez-Padron PhD</h3>
-									<p>Quick Description.</p>
+									<p>Principal Investigator.</p>
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-2.jpg" alt="" class="team-image">
 									<h3 class="team-name">Laisel Martinez PharmD</h3>
-									<p>Quick Description</p>
+									<p>Principal Investigator</p>
 								</div>
-							</div>
+							<div class="col-md-3">
+								<div class="team">
+									<img src="images/person-4.jpg" alt="" class="team-image">
+									<h3 class="team-name">Nieves Santos</h3>
+									<p>Lab Manager.</p>
+								</div>	
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-3.jpg" alt="" class="team-image">
 									<h3 class="team-name">Miguel Rojas</h3>
-									<p>Miguel is a graduate student as a member Physician Scientist program. He is interested in the application of computational tools to understand the progression of vascular pathologies</p>
+									<p>Graduate Student</p>
 							<div class="col-md-3">
 								<div class="team">
-									<img src="images/person-4.jpg" alt="" class="team-image">
+									<img src="images/person-3.jpg" alt="" class="team-image">
 									<h3 class="team-name">Zachary Zigmund</h3>
-									<p>Quick Description.</p>
-							</div>
+									<p>Graduate Student.</p>
+							    </div>
 							<div class="col-md-3">
 								<div class="team">
-									<img src="images/person-4.jpg" alt="" class="team-image">
+									<img src="images/person-3.jpg" alt="" class="team-image">
 									<h3 class="team-name">Felipe Conti, PhD</h3>
-									<p>Quick Description.</p>
+									<p>Postdoctoral Researcher.</p>
 								</div>
-							</div>
+							<div class="col-md-3">
+								<div class="team">
+									<img src="images/person-3.jpg" alt="" class="team-image">
+									<h3 class="team-name">Brandon Applewhite</h3>
+									<p>Graduate Student.</p>
+							    </div>	
+							<div class="col-md-3">
+								<div class="team">
+									<img src="images/person-3.jpg" alt="" class="team-image">
+									<h3 class="team-name">Ahmar Rauf</h3>
+									<p>Postdoctoral Researcher.</p>
+								</div>	
 						</div> <!-- .row -->
 					</div> <!-- .container -->
 				</div>
