--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="feature">
+									<img src="images/icon-energy-small.png" alt="" class="feature-image">
+									<h2 class="feature-title">Education</h2>
+									<p>Our laboratory focuses on mentorship and diversity, from high school voulnteers to postdoctoral fellows</p>
+									<a href="" class="button">Learn more</a>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<div class="feature">
 									<img src="images/icon-genetics-small.png" alt="" class="feature-image">
 									<h2 class="feature-title">Genetics</h2>
 									<p>Dr. Vazquez-Padron especializes in the development of advanced trasngenic murine models.</p>
