--- a/about.html
+++ b/about.html
@@ -69,6 +69,7 @@
 				<div class="fullwidth-block" data-bg-color="#edf2f4">
 					<div class="container">
 						<h2 class="section-title">Our team</h2>
+						<div class="row">
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-1.jpg" alt="" class="team-image">
