--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 								</div>	
 							<div class="col-md-3">
 								<div class="team">
-									<img src="images/person-3.jpg" alt="" class="team-image">
+									<img src="images/HEADSHOT-MR.jpg" alt="" class="team-image">
 									<h3 class="team-name">Miguel Rojas</h3>
 									<p>Graduate Student</p>
 							<div class="col-md-3">
