--- a/about.html
+++ b/about.html
@@ -116,6 +116,11 @@
 									<h3 class="team-name">Ahmar Rauf</h3>
 									<p>Postdoctoral Researcher.</p>
 								</div>	
+							<div class="col-md-3">
+								<div class="team">
+									<img src="images/HEADSHOT-MT.jpg" alt="" class="team-image">
+									<h3 class="team-name">Marina Tabbara</h3>
+									<p>Medical Student.</p>				
 						</div> <!-- .row -->
 					</div> <!-- .container -->
 				</div>
