--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
 								</div>	
 							<div class="col-md-3">
 								<div class="team">
-									<img src="images/HEADSHOT-MT.jpg" alt="" class="team-image">
+									<img src="images/MT.jpg" alt="" class="team-image">
 									<h3 class="team-name">Marina Tabbara</h3>
 									<p>Medical Student.</p>				
 						</div> <!-- .row -->
