--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
 				</div>
 			</header>
 
-			<div class="page-head" data-bg-image="images/page-head-3.jpg">
+			<div class="page-head" data-bg-image="images/Blue.jpg">
 				<div class="container">
 					<h2 class="page-title">Our Projects</h2>
 					<small>Quick Description of our main projects </small>
@@ -72,48 +72,48 @@
 						<div class="project-list">
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-1.jpg" alt="Project"></figure>
-									<h3 class="project-title">Laisel projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Dr. Martinez projects</h3>
 									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-2.jpg" alt="Project"></figure>
-									<h3 class="project-title">Miguel Projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Atherosclerosis</h3>
 									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-3.jpg" alt="Project"></figure>
-									<h3 class="project-title">Zach Projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Arteriovenous Fistulas</h3>
 									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-4.jpg" alt="Project"></figure>
-									<h3 class="project-title">Felipe Projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Hypertension and Metabolic Diseases</h3>
 									<p>Quick Description.</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-5.jpg" alt="Project"></figure>
-									<h3 class="project-title">Medical Student Projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Translational Projects</h3>
 									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
 							</div>
 							<div class="project">
 								<div class="project-content">
-									<figure class="project-image"><img src="images/project-6.jpg" alt="Project"></figure>
-									<h3 class="project-title">Clinical Projects</h3>
+									<figure class="project-image"><img src="images/vessel.jpg" alt="Project"></figure>
+									<h3 class="project-title">Student Projects</h3>
 									<p>Quick Description</p>
 									<a href="project.html" class="button">Learn more</a>
 								</div>
