--- a/project.html
+++ b/project.html
@@ -41,7 +41,6 @@
 							<ul class="menu">
 								<li class="home menu-item"><a href="index.html"><img src="images/home-icon.png" alt="Home"></a></li>
 								<li class="menu-item"><a href="about.html">About</a></li>
-								<li class="menu-item"><a href="services.html">Services</a></li>
 								<li class="menu-item current-menu-item"><a href="projects.html">Our projects</a></li>
 								<li class="menu-item"><a href="contact.html">Contact</a></li>
 							</ul>
@@ -52,7 +51,7 @@
 				</div>
 			</header>
 
-			<div class="page-head" data-bg-image="images/page-head-3.jpg">
+			<div class="page-head" data-bg-image="images/Blue.jpg">
 				<div class="container">
 					<h2 class="page-title">Our Projects</h2>
 					<small>Our main current projects are highlighted below </small>
@@ -66,11 +65,11 @@
 						<div class="row">
 							<div class="col-md-6">
 								<figure>
-									<img src="images/figure.jpg" alt="">
+									<img src="images/vessel.jpg" alt="">
 								</figure>
 							</div>
 							<div class="col-md-6">
-								<h2 class="section-title">Suscipit laboriosam aliquid commodi</h2>
+								<h2 class="section-title">Subtittle of Project</h2>
 								<ul class="project-info">
 									<li><strong>Date:</strong> 02/10/21</li>
 									<li><strong>Goal:</strong> Describe goal of each project</li>
