--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 							<div class="col-md-3">
 								<div class="team">
 									<img src="images/person-3.jpg" alt="" class="team-image">
-									<h3 class="team-name">Zachary Zigmund</h3>
+									<h3 class="team-name">Zachary Zigmond</h3>
 									<p>Graduate Student.</p>
 							    </div>
 							<div class="col-md-3">
