--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,6 @@
 							<ul class="menu">
 								<li class="home menu-item"><a href="index.html"><img src="images/home-icon.png" alt="Home"></a></li>
 								<li class="menu-item"><a href="about.html">About</a></li>
-								<li class="menu-item"><a href="services.html">Services</a></li>
 								<li class="menu-item"><a href="projects.html">Our projects</a></li>
 								<li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
 							</ul>
@@ -52,7 +51,7 @@
 				</div>
 			</header>
 
-			<div class="page-head" data-bg-image="images/page-head-4.jpg">
+			<div class="page-head" data-bg-image="images/page-head-mr.jpg">
 				<div class="container">
 					<h2 class="page-title">Contact</h2>
 					<small>Students, Scientists, and Collaborators pleae use any of these avenues to contact us</small>
